fekry adding personal information

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-8 header-right">
 					<h2>Hello</h2>
-					<h1>I'm Christopher Doe</h1>
+					<h1>I'm Ahmed Fekry</h1>
 					<h6>Web Designer and Developer</h6>
 					<ul class="address">
 						<li>
@@ -62,7 +62,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li>
 							<ul class="address-text">
 								<li><b>PHONE </b></li>
-								<li>+00 111 222 3333</li>
+								<li>+20 1120590421</li>
 							</ul>
 						</li>
 						<li>
@@ -74,13 +74,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li>
 							<ul class="address-text">
 								<li><b>E-MAIL </b></li>
-								<li><a href="mailto:example@mail.com"> mail@example.com</a></li>
+								<li><a href="mailto:ahmedfikry78@gmail.com">ahmedfikry78@gmail.com</a></li>
 							</ul>
 						</li>
 						<li>
 							<ul class="address-text">
 								<li><b>WEBSITE </b></li>
-								<li><a href="http://w3layouts.com">www.myresume.com</a></li>
+								<li><a href="ahmedfekry.github.io">ahmedfekry.github.io</a></li>
 							</ul>
 						</li>
 					</ul>
