--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li>
 							<ul class="address-text">
 								<li><b>ADDRESS </b></li>
-								<li>756 global Place, North Sydney, Canada.</li>
+								<li>7 Old Bridge Street, Saqil-Awseem-Giza, Egypt.</li>
 							</ul>
 						</li>
 						<li>
