fekry adding favicon

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		});
 </script>
 <!--//end-smooth-scrolling-->
+<link rel="shortcut icon" type="text/css" href="favicon.png">
 </head>
 <body>
 	<!--banner-->
