--- a/index.html
+++ b/index.html
@@ -120,12 +120,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div id="about" class="about">
 		<div class="container">
 			<h3 class="title"> About Me</h3>
-			<div class="col-md-8 about-left">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse laoreet sem sit amet dolor luctus pellentesque. Pellentesque eleifend tellus at interdum elementum. Nam egestas molestie elit. Vivamus sed accumsan quam, a mollis magna. Nam aliquet eros eget sapien consequat tincidunt at vel nibh. Duis ut turpis mi. Duis nec scelerisque urna, sit amet varius arcu. Aliquam aliquet sapien quis mauris semper suscipit. Maecenas pharetra dapibus posuere. Praesent odio sem, varius quis dolor vel, maximus dapibus mi. Pellentesque mattis mauris neque. Nam aliquam turpis ante, at cursus massa ullamcorper ut. Proin id diam id nisi sagittis pellentesque sed sit amet eros.  
-				In porttitor tempus nulla, a porta purus commodo sed. Praesent hendrerit nisi nunc, ut porttitor justo pellentesque et ac gravida sem mattis. Donec ornare justo nec</p>
+			<div class="about-center">
+				<p class="textarea_">Nah, I don't like taking about my self and i realy don't know what to write but let me introduce myself in few words. I am Ahmed Mohammed Fekry, graduated from faculty of computers and infromation cairo university with bachelor's degree in computer science. I am web developer i have worked in few componies most of them were start-ups and i had a greet experiance with each one of them, personaly i am not that type of a corporate guy i love working for start-ups </p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse laoreet sem sit amet dolor luctus pellentesque Nam egestas molestie elit. Vivamus sed accumsan quam, a mollis magna. Nam aliquet eros eget sapien consequat</p>
 			</div>
-			<div class="col-md-4 about-right">
+			<!-- <div class="col-md-4 about-right">
 				<ul>
 					<h5>Awards</h5>
 					<li><span class="glyphicon glyphicon-menu-right"></span> Lorem ipsum dolor sit amet cingelit</li>
@@ -135,7 +134,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li><span class="glyphicon glyphicon-menu-right"></span> Aliquam ac nisl id justo malesuada </li>
 				</ul>
 				<div class="clearfix"> </div>
-			</div>
+			</div> -->
 			<div class="clearfix"> </div>
 		</div>
 	</div>
