--- a/FrontendMentor/qr-code-component-main/index.html
+++ b/FrontendMentor/qr-code-component-main/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
@@ -13,25 +15,35 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-  <div class="main-container">
-    <div class="qr-code">
-      <div class="image">
-        <img src="images/image-qr-code.png" alt="">
-      </div>
-      <div class="texting">
-        <div class="title">
-          <h3>Improve your front-end skills by building projects</h3>
+  <main>
+    <div class="main-container">
+      <div class="qr-code">
+        <div class="image">
+          <img src="images/image-qr-code.png" alt="qr code image for frontendmentor.io first challenge">
         </div>
-        <div class="body">
-          <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        <div class="texting">
+          <div class="title">
+            <h3>Improve your front-end skills by building projects</h3>
+          </div>
+          <div class="body">
+            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  </main>
 </body>
+
 </html>
