--- a/FrontendMentor/product-preview-card-component-main/index.html
+++ b/FrontendMentor/product-preview-card-component-main/index.html
@@ -19,13 +19,13 @@
   </style>
 </head>
 <body>
-  <main>
-    <div class="product">
+  <main class="grid">
+    <div class="product rounded">
       <div class="product-image">
-        <!-- <img src="images/image-product-desktop.jpg" alt=""> -->
+        <img src="/images/image-product-mobile.jpg" class="rounded-image " alt="">
       </div>
       <div class="product-details">
-        <h5>Perfume</h5>
+        <h3>perfume</h3>
         <h1>Gabrielle Essence Eau De Parfum</h1>
         <p> A floral, solar and voluptuous interpretation composed by Olivier Polge, 
           Perfumer-Creator for the House of CHANEL.</p>
@@ -37,10 +37,5 @@
       </div>
     </div>
   </main>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-  
 </body>
 </html>
