fixing the image

--- a/FrontendMentor/product-preview-card-component-main/index.html
+++ b/FrontendMentor/product-preview-card-component-main/index.html
@@ -22,7 +22,7 @@
   <main class="grid">
     <div class="product rounded">
       <div class="product-image">
-        <img src="/images/image-product-mobile.jpg" class="rounded-image " alt="">
+        <img src="./images/image-product-mobile.jpg" class="rounded-image " alt="">
       </div>
       <div class="product-details">
         <h3>perfume</h3>
