--- a/Practices/GridSystem/index.html
+++ b/Practices/GridSystem/index.html
@@ -24,22 +24,22 @@
             <a href="#portfolio" class="button">View my work</a>
         </div>
         <div class="welcome-image">
-            <img src="/assets/banner_image.png" alt="pic of planet">
+            <img src="./assets/banner_image.png" alt="pic of planet">
         </div>
     </section>
     <section id="portfolio">
         <h3>Some of my project</h3>
         <div class="projects grid">
             <a href="">
-                <img src="/assets/project_1.png" alt="space race img">
+                <img src="./assets/project_1.png" alt="space race img">
                 <h4>Space Race Game</h4>
             </a>
             <a href="">
-                <img src="/assets/project_2.png" alt="planet boy img">
+                <img src="./assets/project_2.png" alt="planet boy img">
                 <h4>Space Race Game</h4>
             </a>
             <a href="">
-                <img src="/assets/project_3.png" alt="captain cosmo blog img">
+                <img src="./assets/project_3.png" alt="captain cosmo blog img">
                 <h4>Space Race Game</h4>
             </a>
         </div>
@@ -48,19 +48,19 @@
         <h3>This i can do</h3>
         <ul class="grid">
             <li>
-                <img src="/assets/comet_1.svg" alt="comet">
+                <img src="./assets/comet_1.svg" alt="comet">
                 <h4>Javascript</h4>
             </li>
             <li>
-                <img src="/assets/comet_2.svg" alt="comet">
+                <img src="./assets/comet_2.svg" alt="comet">
                 <h4>React</h4>
             </li>
             <li>
-                <img src="/assets/comet_3.svg" alt="comet">
+                <img src="./assets/comet_3.svg" alt="comet">
                 <h4>Firebase</h4>
             </li>
             <li>
-                <img src="/assets/comet_4.svg" alt="comet">
+                <img src="./assets/comet_4.svg" alt="comet">
                 <h4>Flutter</h4>
             </li>
         </ul>
@@ -79,8 +79,8 @@
         <div class="grid">
             <p class="copyright">Copyright 2020 Cosmo Junkie</p>
             <u class="social">
-                <li><a href=""><img src="/assets/icon_fb.svg" alt="facebook"></a></li>
-                <li><a href=""><img src="/assets/icon_tw.svg" alt="twitter"></a></li>
+                <li><a href=""><img src="./assets/icon_fb.svg" alt="facebook"></a></li>
+                <li><a href=""><img src="./assets/icon_tw.svg" alt="twitter"></a></li>
             </u>
         </div>
     </footer>
