--- a/FrontendMentor/testimonials-grid-section-main/index.html
+++ b/FrontendMentor/testimonials-grid-section-main/index.html
@@ -67,7 +67,7 @@
       </p>
     </div>
 
-    <div class="container white">
+    <div class="container white first">
       <div class="profile">
         <img src="./images/image-jeanette.jpg" alt="jeanette">
         <div class="title">
@@ -104,7 +104,7 @@
       </p>
     </div>
 
-    <div class="container white">
+    <div class="container white second">
       <div class="profile">
         <img src="./images/image-kira.jpg" alt="kira">
         <div class="title">
@@ -129,7 +129,7 @@
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Ahmed Fekry</a>.
   </div>
 </body>
 
