--- a/Practices/Bootstrap/index.html
+++ b/Practices/Bootstrap/index.html
@@ -1,15 +1,66 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="container">
-        <h1>Hello, world!</h1>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  </body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+</head>
+
+<body>
+    <nav class="navbar sticky-top navbar-expand-lg text-white bg-danger">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar sdddcroll</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 " >
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Link
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled">Link</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
+    <section class="container">
+        <div class="row justify-content-center">
+            <div class="col-2 lead text-bg-danger">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi soluta rem error quasi temporibus, nisi odio natus, excepturi veritatis animi porro ad fugit ullam, nulla itaque. Unde omnis voluptatem quam nostrum voluptatibus dolore itaque quaerat cumque iure laboriosam rem, natus incidunt, perspiciatis corporis ex ipsa repellat voluptates! Cum similique enim ipsum, deserunt totam voluptatem at. Dolorum neque vel quisquam? Vel voluptatibus aperiam laboriosam, quae earum mollitia suscipit, odio saepe nemo ex ducimus non? Aliquid aperiam beatae corporis voluptate, deserunt, perspiciatis animi vel velit maiores itaque quisquam nulla distinctio iure dolorem repudiandae, a eius et ut dolor ipsa corrupti aliquam? Placeat vel eaque commodi officiis quam eos doloremque! Minus quibusdam omnis earum amet placeat possimus tempora voluptas accusantium excepturi ipsum, quos assumenda nobis saepe eligendi perferendis quam architecto itaque impedit consectetur, exercitationem modi deleniti cumque cum. Rerum nostrum, modi sed vitae ipsa aut, nemo, sit facilis minima consequuntur tenetur officia ea quisquam sint reprehenderit eum necessitatibus veritatis corporis minus expedita! Assumenda consectetur iure reiciendis itaque! Unde suscipit officiis ab sed quae, exercitationem iusto quaerat quia placeat facere consequatur ullam ea dolorum? Doloremque dolore praesentium minima dolor, sequi voluptatum harum rerum consequuntur. Explicabo harum atque debitis mollitia numquam, voluptas quaerat, vero iure consectetur deleniti repellat. Laboriosam delectus deleniti nam vitae reiciendis consequatur inventore ad obcaecati expedita corporis amet qui quod, praesentium impedit beatae cumque assumenda ipsa ratione? Veritatis quisquam molestiae eius esse enim quo, iste, quod minima maiores officiis maxime in at praesentium libero harum provident assumenda ea laboriosam saepe sit voluptate, quidem nulla. Quas autem aliquid pariatur excepturi earum possimus. Magnam ipsam aut molestiae assumenda rerum tempora in vero temporibus sit ex cupiditate et aliquid odio libero saepe, ab mollitia iste beatae dicta laborum obcaecati impedit laudantium harum labore. Rem sequi itaque eveniet ipsa quo nisi beatae. Unde quod praesentium, dolore aut, illum voluptatum minima earum nisi ipsam facere non quam ducimus voluptatibus quos maxime, vero laboriosam repellendus nemo autem rerum placeat in. Expedita ex, nulla nam vitae vero minima porro odit sint quae? Architecto ipsa necessitatibus, repellat numquam ea fugit perferendis minus iusto delectus provident maxime aspernatur dolore impedit consequatur! Vero voluptate accusamus provident fuga ipsam. Corrupti culpa consequuntur assumenda molestias eaque voluptas blanditiis rem eum. Cupiditate quis aut enim quidem voluptas vel voluptates deleniti dicta ullam nisi distinctio, ipsum, ab iusto hic tempora perferendis ratione corrupti praesentium est soluta accusamus fuga fugiat eum ducimus? Est exercitationem eius nihil ex, molestias nostrum sed voluptatem vero expedita debitis cumque laborum iste nobis vel iure recusandae nisi optio itaque nam dignissimos dolore! In accusantium alias ducimus minima dolor? Ipsa enim ab eos quisquam fugiat quidem ducimus temporibus est? Aliquid tenetur dicta consequuntur perspiciatis quae possimus quidem illum vero porro odit animi, ipsum, quas iure asperiores ab culpa velit nam! Recusandae ad omnis nulla commodi similique laborum, excepturi rerum laboriosam facilis illum hic corporis dicta iste quo, dolore, porro voluptatum dignissimos nisi sit nam autem reprehenderit aperiam. Labore in aspernatur molestias illo nostrum eveniet nam quo, iure, nisi quisquam rem mollitia dolorem deserunt. Repudiandae libero porro consectetur itaque nulla labore eos velit nesciunt accusamus cum architecto, at officia maxime debitis veritatis! Impedit vero ad consectetur sequi, aut reprehenderit vel labore laudantium odio magni sit tenetur, ipsam suscipit, incidunt optio. Cum velit soluta ad maxime, vero aliquam delectus dignissimos officiis quod veniam perferendis beatae rerum adipisci aliquid et quis iure non nesciunt suscipit deleniti quisquam. Deleniti vel ducimus eum, ad dignissimos iure quam perferendis illo. Fugiat, laborum dicta amet enim, ut a modi excepturi delectus possimus sint consectetur quos. Tempore sunt possimus veritatis veniam at, repellendus temporibus dolores vero mollitia aperiam minus voluptas vitae labore magni? Minus provident odit nisi nemo nesciunt tempora, quisquam fuga consequatur facere adipisci rerum fugit exercitationem accusantium laboriosam nobis molestiae natus incidunt beatae. Omnis autem corrupti iure voluptate doloremque architecto atque error, hic eveniet saepe dolor! Hic, alias. Delectus, nihil? Perferendis numquam impedit accusantium consequatur quasi, quas ratione incidunt eaque, molestias consectetur natus autem quisquam amet velit odit unde distinctio quidem id totam nam, dicta harum qui. Provident officia sunt, nostrum temporibus tempore sed, reiciendis error iure veniam, est recusandae cumque aspernatur corporis odit minus libero dolorem dolores ipsum vero culpa adipisci hic atque odio at? Consectetur delectus eaque suscipit voluptates ad minima architecto aspernatur dolorum modi! Vitae, repellendus in ullam reprehenderit officiis alias cupiditate optio nesciunt, similique quae dolores dolorum! Ex illum aspernatur culpa praesentium distinctio provident illo laudantium soluta harum exercitationem explicabo corrupti facere porro, accusamus sint nobis numquam modi id reiciendis, veniam quae sed. Consequuntur aliquid laudantium cupiditate voluptatibus facilis aliquam dicta autem quis officia deserunt, incidunt veritatis aut harum odit adipisci ipsam, expedita ad ab laboriosam atque perferendis. Itaque, ex enim earum similique ratione possimus velit minima esse incidunt iusto maxime officiis inventore culpa omnis iste placeat voluptatibus ipsam sapiente debitis pariatur, optio explicabo ullam a magni! Incidunt porro libero beatae commodi ipsam rerum a voluptas officia voluptate neque enim, eaque quis ut laborum fugiat, maxime voluptatum! Quas quo ad cupiditate cum consequuntur nemo, sit dolore labore nostrum. Facilis accusamus, sequi quia eius aliquid corrupti tenetur rem ad repellendus architecto quas amet dolorum. Doloremque minus, est dolorum voluptatem consequuntur illum id impedit optio, laboriosam nisi laudantium quibusdam itaque iusto ipsum earum! Culpa delectus mollitia, quisquam sed soluta, incidunt et quia optio ipsum accusantium obcaecati maiores. Nesciunt necessitatibus laboriosam dolores, dolorem esse aut dolorum possimus asperiores neque voluptatum eos fugit. Nostrum enim voluptate illum, nisi accusantium voluptates voluptatum quo quasi quam sapiente, esse dolore culpa repellendus cupiditate nihil incidunt optio, ullam maiores suscipit labore a sequi? Maxime architecto ab fugit? Quaerat tenetur aperiam, aliquam illum assumenda reiciendis cumque enim quia hic nesciunt repudiandae qui esse odio aspernatur distinctio molestias suscipit minima aut veniam magnam? Nostrum, accusantium mollitia autem maiores quibusdam doloribus voluptate architecto nisi consectetur laboriosam, ea magnam porro debitis, exercitationem illum quasi. Quae dolores id inventore a fugiat. Cupiditate soluta quia sint a fugiat debitis? Aliquam commodi expedita tempora ullam voluptas, sed aperiam veniam et optio quae fuga maxime quidem accusantium tenetur voluptatibus odit rerum.</p>
+            </div>
+        </div>
+    </section>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+
 </html>
