--- a/FrontendMentor/intro-section-with-dropdown-navigation-main/index.html
+++ b/FrontendMentor/intro-section-with-dropdown-navigation-main/index.html
@@ -1,133 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
   <link rel="stylesheet" href="css/style.css">
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
 
-  <main>
-    <nav class="navbar navbar-expand-lg">
+  <main class="container-fluid">
+    <nav class="navbar navbar-expand-md">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="./images/logo.svg" alt="">
         </a>
-        <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
             <!-- <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5> -->
-            <button type="button" class="btn-close justify-content-end" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            <button type="button" class="btn-close justify-content-end" data-bs-dismiss="offcanvas"
+              aria-label="Close"></button>
           </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end ">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Features
-                </a>
-                <ul class="dropdown-menu border-0">
-                  <li><a class="dropdown-item d-flex align-items-center" href="#">
-                    <img src="./images/icon-todo.svg" class="me-3" alt="">
-                    Todo List
-                  </a></li>
-                  <li><a class="dropdown-item d-flex align-items-center" href="#">
-                    <img src="./images/icon-calendar.svg" class="me-3" alt="">
-                    Calender
-                  </a></li>
-                  <li><a class="dropdown-item d-flex align-items-center" href="#">
-                    <img src="./images/icon-reminders.svg" class="me-3" alt="">
-                    Reminders
-                  </a></li>
-                  <li><a class="dropdown-item d-flex align-items-center" href="#">
-                    <img src="./images/icon-planning.svg" class="me-3" alt="">
-                    Planning
-                  </a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Company
-                </a>
-                <ul class="dropdown-menu border-0">
-                  <li><a class="dropdown-item d-flex align-items-center" href="#">
-                    History
-                  </a></li>
-                  <li><a class="dropdown-item d-flex align-items-center" href="#">
-                    Our Team
-                  </a></li>
-                  <li><a class="dropdown-item d-flex align-items-center" href="#">
-                    Blog
-                  </a></li>
-                </ul>
-              </li>
-              <li class="nav-item mt-3">
-                Careers
-              </li>
-              <li class="nav-item mt-3">
-                About
-              </li>
-            </ul>
-            <div class="text-center mt-2">
-              <button class="btn border-0">Login</button>
+          <div class="offcanvas-body justify-content-between">
+            <div class="col-12 col-md-6 col-lg-4">
+              <ul class="navbar-nav  justify-content-around">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Features
+                  </a>
+                  <ul class="dropdown-menu border-0">
+                    <li><a class="dropdown-item d-flex align-items-center" href="#">
+                        <img src="./images/icon-todo.svg" class="me-3" alt="">
+                        Todo List
+                      </a></li>
+                    <li><a class="dropdown-item d-flex align-items-center" href="#">
+                        <img src="./images/icon-calendar.svg" class="me-3" alt="">
+                        Calender
+                      </a></li>
+                    <li><a class="dropdown-item d-flex align-items-center" href="#">
+                        <img src="./images/icon-reminders.svg" class="me-3" alt="">
+                        Reminders
+                      </a></li>
+                    <li><a class="dropdown-item d-flex align-items-center" href="#">
+                        <img src="./images/icon-planning.svg" class="me-3" alt="">
+                        Planning
+                      </a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Company
+                  </a>
+                  <ul class="dropdown-menu border-0">
+                    <li><a class="dropdown-item d-flex align-items-center" href="#">
+                        History
+                      </a></li>
+                    <li><a class="dropdown-item d-flex align-items-center" href="#">
+                        Our Team
+                      </a></li>
+                    <li><a class="dropdown-item d-flex align-items-center" href="#">
+                        Blog
+                      </a></li>
+                  </ul>
+                </li>
+                <li class="nav-item mt-3 mt-md-0 align-items-md-center">
+                  <a class="nav-link active" aria-current="page" href="#">Careers</a>
+                </li>
+                <li class="nav-item mt-3 mt-md-0 align-items-md-center">
+                  <a href="#" class="nav-link active">About</a>
+                </li>
+              </ul>
             </div>
-            <div class="text-center mt-2">
-              <button class="btn px-5 btn-outline-dark">Register</button>
+            <div class="col-12 col-md-3 d-md-inline-flex justify-content-end">
+              <div class="text-center mt-2 mt-md-0">
+                <button class="btn border-0">Login</button>
+              </div>
+              <div class="text-center mt-2 mt-md-0 ">
+                <button class="btn px-5 btn-outline-dark">Register</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </nav>
     <section id="intro">
-      <div class="row">
-        <div class="col-12">
-          <img src="./images/image-hero-mobile.png" class="img-fluid" alt="">
+      <div class="row flex-row-reverse p-md-5 justify-content-md-around">
+        <div class="col-12 col-md-6 col-lg-5">
+          <img src="./images/image-hero-mobile.png" class="img-fluid d-md-none d-block" alt="">
+          <img src="./images/image-hero-desktop.png" class="img-fluid d-none d-md-block" alt="">
         </div>
-        <div class="col-12 justify-content-center mt-4">
-            <div class="col-12 ">
-              <h1 class="display-3 text-center fw-bold">Make remote work</h1>
-            </div>
-            <div class="col-12 mt-3">
-              <p class="text-center">Get your team in sync, no matter your location. Streamline processes,create team rituals, and watch productivity soar.
-              </p>
-            </div>
-            <div class="col-12 d-flex justify-content-center mt-3">
-              <button class="btn btn-lg btn-dark ">Learn more</button>
-            </div>
-            <div class="col-12 d-inline-flex justify-content-around mt-3">
-              <div class="col-2">
-                <img src="./images/client-databiz.svg" class="img-fluid" alt="">
-              </div>
-              <div class="col-2">
-                <img src="./images/client-audiophile.svg" class="img-fluid" alt="">
-              </div>
-              <div class="col-2">
-                <img src="./images/client-meet.svg" class="img-fluid" alt="">
-              </div>
-              <div class="col-2">
-                <img src="./images/client-databiz.svg" class="img-fluid" alt="">
-              </div>
-              
-            </div>
+        <div class="col-12 col-md-6 col-lg-5 d-flex flex-column justify-content-md-between mt-4">
+          <div class="col-12 d-inline-flex justify-content-center d-md-flex flex-md-column">
+            <h1 class="display-3 text-center text-md-start fw-bold pe-3">Make </h1>
+            <h1 class="display-3 text-center text-md-start fw-bold">remote work</h1>
           </div>
-  
+          <div class="col-12 mt-3">
+            <p class="text-center text-md-start lead fw-bold">Get your team in sync, no matter your location. Streamline
+              processes,create team rituals, and watch productivity soar.
+            </p>
+          </div>
+          <div class="col-12 d-flex justify-content-center justify-content-md-start mt-3">
+            <button class="btn btn-lg btn-dark ">Learn more</button>
+          </div>
+          <div class="col-12 d-inline-flex justify-content-around mt-3">
+            <div class="col-2">
+              <img src="./images/client-databiz.svg" class="img-fluid" alt="">
+            </div>
+            <div class="col-2">
+              <img src="./images/client-audiophile.svg" class="img-fluid" alt="">
+            </div>
+            <div class="col-2">
+              <img src="./images/client-meet.svg" class="img-fluid" alt="">
+            </div>
+            <div class="col-2">
+              <img src="./images/client-databiz.svg" class="img-fluid" alt="">
+            </div>
+
+          </div>
+        </div>
+
       </div>
     </section>
   </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 
 </body>
+
 </html>
