finished the readme file and fixed the shadow

--- a/FrontendMentor/intro-section-with-dropdown-navigation-main/index.html
+++ b/FrontendMentor/intro-section-with-dropdown-navigation-main/index.html
@@ -52,20 +52,20 @@
                     aria-expanded="false">
                     Features
                   </a>
-                  <ul class="dropdown-menu border-0">
-                    <li><a class="dropdown-item d-flex align-items-center" href="#">
+                  <ul class="dropdown-menu border-0 shadow ">
+                    <li><a class="dropdown-item d-flex align-items-center  justify-content-start" href="#">
                         <img src="./images/icon-todo.svg" class="me-3" alt="">
                         Todo List
                       </a></li>
-                    <li><a class="dropdown-item d-flex align-items-center" href="#">
+                    <li><a class="dropdown-item d-flex align-items-center justify-content-start" href="#">
                         <img src="./images/icon-calendar.svg" class="me-3" alt="">
                         Calender
                       </a></li>
-                    <li><a class="dropdown-item d-flex align-items-center" href="#">
+                    <li><a class="dropdown-item d-flex align-items-center  justify-content-start" href="#">
                         <img src="./images/icon-reminders.svg" class="me-3" alt="">
                         Reminders
                       </a></li>
-                    <li><a class="dropdown-item d-flex align-items-center" href="#">
+                    <li><a class="dropdown-item d-flex align-items-center  justify-content-start" href="#">
                         <img src="./images/icon-planning.svg" class="me-3" alt="">
                         Planning
                       </a></li>
@@ -76,7 +76,7 @@
                     aria-expanded="false">
                     Company
                   </a>
-                  <ul class="dropdown-menu border-0">
+                  <ul class="dropdown-menu border-0 shadow">
                     <li><a class="dropdown-item d-flex align-items-center" href="#">
                         History
                       </a></li>
