fixed the accessiblity issues and centered the main content

--- a/FrontendMentor/testimonials-grid-section-main/index.html
+++ b/FrontendMentor/testimonials-grid-section-main/index.html
@@ -32,7 +32,7 @@
       <div class="profile">
         <img src="./images/image-daniel.jpg" alt="daniel">
         <div class="title">
-          <h2>Daniel Clifford</h2>
+          <h1>Daniel Clifford</h1>
           <h3>Verified Graduate</h3>
         </div>
       </div>
@@ -54,7 +54,7 @@
       <div class="profile">
         <img src="./images/image-jonathan.jpg" alt="jonathan">
         <div class="title">
-          <h2>Jonathan Walters</h2>
+          <h1>Jonathan Walters</h1>
           <h3>Verified Graduate</h3>
         </div>
       </div>
@@ -71,7 +71,7 @@
       <div class="profile">
         <img src="./images/image-jeanette.jpg" alt="jeanette">
         <div class="title">
-          <h2>Jeanette Harmon</h2>
+          <h1>Jeanette Harmon</h1>
           <h3>Verified Graduate</h3>
         </div>
       </div>
@@ -88,7 +88,7 @@
       <div class="profile">
         <img src="./images/image-patrick.jpg" alt="patrick">
         <div class="title">
-          <h2>Patrick Abrams</h2>
+          <h1>Patrick Abrams</h1>
           <h3>Verified Graduate</h3>
         </div>
       </div>
@@ -108,7 +108,7 @@
       <div class="profile">
         <img src="./images/image-kira.jpg" alt="kira">
         <div class="title">
-          <h2>Kira Whittle</h2>
+          <h1>Kira Whittle</h1>
           <h3>Verified Graduate</h3>
         </div>
       </div>
@@ -127,10 +127,12 @@
       </p>
     </div>
   </main>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Ahmed Fekry</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Ahmed Fekry</a>.
+    </div>
+  </footer>
 </body>
 
 </html>
