--- a/FrontendMentor/fylo-dark-theme-landing-page-master/index.html
+++ b/FrontendMentor/fylo-dark-theme-landing-page-master/index.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="row justify-content-center">
-        <a class="col-4 col-lg-2 col-md-3 px-5 py-2 btn px-5 btn-st bg-blue rounded-pill" href="">Get Started</a>
+        <a class="col-6 col-md-4 col-lg-2 col-md-3 px-5 py-2 btn px-5 btn-st bg-blue rounded-pill" href="">Get Started</a>
       </div>
     </section>
 
