--- a/FrontendMentor/easybank-landing-page-master/index.html
+++ b/FrontendMentor/easybank-landing-page-master/index.html
@@ -69,7 +69,7 @@
     <section id="about" class="py-5">
       <div class="container-md mt-lg-5">
           <div class="row text-center text-md-start justify-content-center justify-content-md-start">
-            <div class="col-8">
+            <div class="col-8 d-flex flex-column gap-3 gap-lg-4">
               <h3>Why choose Easybank?</h3>
               <p class="parag">We leverage Open Banking to turn your bank account into your financial hub. Control 
                 your finances like never before.</p>
@@ -77,25 +77,25 @@
           </div>
     
           <div class="row justify-content-center mt-2">
-            <div class="col-10 col-md-6 col-lg-3 p-3 text-center d-flex flex-column gap-2 align-items-center">
+            <div class="col-10 col-md-6 col-lg-3 p-3 text-center text-lg-start d-flex flex-column gap-3 gap-lg-4 align-items-center align-items-lg-start">
               <img src="./images/icon-online.svg" alt="">
               <h3>Online Banking</h3>
               <p class="parag">Our modern web and mobile applications allow you to keep track of your finances 
                 wherever you are in the world.</p>
             </div>
-            <div class="col-10 col-md-6 col-lg-3 p-3 text-center d-flex flex-column gap-2 align-items-center">
+            <div class="col-10 col-md-6 col-lg-3 p-3 text-center text-lg-start d-flex flex-column gap-3 gap-lg-4 align-items-center align-items-lg-start">
               <img src="./images/icon-budgeting.svg" alt="">
               <h3>Simple Budgeting</h3>
               <p class="parag">See exactly where your money goes each month. Receive notifications when you’re 
                 close to hitting your limits.</p>
             </div>
-            <div class="col-10 col-md-6 col-lg-3 p-3 text-center d-flex flex-column gap-2 align-items-center">
+            <div class="col-10 col-md-6 col-lg-3 p-3 text-center text-lg-start d-flex flex-column gap-3 gap-lg-4 align-items-center align-items-lg-start">
               <img src="./images/icon-onboarding.svg" alt="">
               <h3>Fast Onboarding</h3>
               <p class="parag">We don’t do branches. Open your account in minutes online and start taking control 
                 of your finances right away.</p>
             </div>
-            <div class="col-10 col-md-6 col-lg-3 p-3 text-center d-flex flex-column gap-2 align-items-center">
+            <div class="col-10 col-md-6 col-lg-3 p-3 text-center text-lg-start d-flex flex-column gap-3 gap-lg-4 align-items-center align-items-lg-start">
               <img src="./images/icon-api.svg" alt="">
               <h3>Open API</h3>
               <p class="parag">Manage your savings, investments, pension, and much more from one account. Tracking 
